force-app/main/default/objects/leaseworks__Transaction_Match__c/leaseworks__Transaction_Match__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_2203 Transaction Match</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>