force-app/main/default/objects/leaseworks__Transaction_Match__c/fields/leaseworks__Aircraft_In_Transaction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_In_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft In Transaction</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose an Aircraft In Transaction from an acquisition transaction</errorMessage>
        <filterItems>
            <field>leaseworks__Aircraft_In_Transaction__c.leaseworks__Transaction__r.leaseworks__Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Acquisition</value>
        </filterItems>
        <infoMessage>Aircraft In Transaction from acquisition transactions only will be listed.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Aircraft_In_Transaction__c</referenceTo>
    <relationshipLabel>Transaction Matches</relationshipLabel>
    <relationshipName>Transaction_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>