force-app/main/default/objects/leaseworks__Transaction_Match__c/fields/leaseworks__Interaction_Log__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interaction_Log__c</fullName>
    <label>Interaction Log</label>
    <referenceTo>leaseworks__Customer_Interaction_Log__c</referenceTo>
    <relationshipLabel>Transaction Matches</relationshipLabel>
    <relationshipName>Transaction_Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>